Final-integration